Adding transactions, fixing yaml file, adding validation to numeric value price, switching to arrow functions, fixing task.sql file
